			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

12-May-2002
~~~~~~~~~~~
Allow hidden subdirectories in <Choices>/SendTo which have their contents
included only for certain MIME types (Geoff Youngs).
When changing directory, remove any trailing /s from the path.
Make sure panels never get lowered under the pinboard.

10-May-2002
~~~~~~~~~~~
Initial support for showing iconified windows.

09-May-2002
~~~~~~~~~~~
Changed the way pinboard icons are implemented.
Changed the way backdrop applications set the backdrop.
Always use button-3 for the pinboard menu, as the window manager menu must
be on button-2 (spotted by Geoff Youngs).

08-May-2002
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).
Middle button clicks on the pinboard are passed to the window manager.
Many improvements to the pinboard:
- Changing font updates the pinboard icons.
- Button-2 clicks are passed to window manager.
- Drop highlight doesn't flicker.

07-Apr-2002
~~~~~~~~~~~
Improved highlighting of icons (Andras Mohari).

06-Apr-2002
~~~~~~~~~~~
The pinboard is now a screen-sized window. Faster and better looking.
Setting the backdrop is now done from the filer.

03-Apr-2002
~~~~~~~~~~~
The Link box allows an existing symlink to be replaced, instead of
complainly that the destination already exists (suggested by Arnaud Calvo).
Bugfix: When editing a panel icon, the tooltip didn't update until the next
	restart (Olli Helenius).

02-Apr-2002
~~~~~~~~~~~
Added Sort to the OpenDir SOAP method (Stephen Watson).

30-Apr-2002
~~~~~~~~~~~
Alpha-blending for Small icons, too.
Bugfix: When copying directories, ignore an error caused by filesystems,
	such as Samba shares, that don't support chmod fully (reported by
	Andrew S Dixon).

29-Apr-2002
~~~~~~~~~~~
SOAP method OpenDir now allows Style and Details to be specified
(Stephen Watson).

28-Apr-2002
~~~~~~~~~~~
Use alpha-blending in Large and Huge display modes. Limit icons in menus to
Small and Large sizes.

27-Apr-2002