@@ -8,6 +8,8 @@ Allow hidden subdirectories in <Choices>/SendTo which have their contents
 included only for certain MIME types (Geoff Youngs).
 When changing directory, remove any trailing /s from the path.
 Make sure panels never get lowered under the pinboard.
+Iconified windows are now displayed on the pinboard, not floating over
+everything else.
 
 10-May-2002
 ~~~~~~~~~~~
